[package]
name = "sample"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
topaz = { path = "../topaz" }
percy-dom = { version = "0.7.1"}
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.57", features = [
    "Window",
    "Worker",
    "Document",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'MouseEvent',
    'Event',
    "console",
    'Response',
    'Element',
    'HtmlElement',
    'Node',
] }
js-sys = {version = "0.3.57"}
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }



[patch.crates-io]
percy-dom = { path = "../percy/crates/percy-dom" }
