[package]
name = "topaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
capture-print = []
capture-panic = ["console_error_panic_hook"]
default = ["capture-print", "capture-panic"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = [
    "Window",
    "Worker",
    "Document",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Element',
    'HtmlElement',
    'Node',
] }

