[package]
name = "topaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
capture-print = []
capture-panic = ["console_error_panic_hook"]
default = ["capture-print", "capture-panic"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
http = "0.2.7"
multimap = "0.8.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
web-sys = { version = "0.3.57", features = [
    "Window",
    "Worker",
    "Document",
    'Headers',
    'History',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Element',
    'Event',
    'HtmlElement',
    'Location',
    "HtmlCollection",
    'Node',
] }

